@@ -1,3 +1,13 @@
+2011-11-11  Andreas Kling  <kling@webkit.org>
+
+        Unreviewed Chromium build fix after r99958.
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+        (GenerateImplementationCustomCall):o
+
+            Remove hack that forced HTMLOptionsCollection to have a custom
+            callAsFunctionCallback().
+
 2011-11-11  Mike Lewis <mikelikespie@gmail.com>
 
         Web Inspector: DevTools InspectorStubs.js incorrectly converting responses to arguments.
